--- a/1. Abstract.md
+++ b/1. Abstract.md
@@ -1,3 +1,3 @@
 This project monitors environmental parameters such as temperature, humidity, and air quality using sensors and uploads real-time data to a cloud platform via WiFi.
 The system uses Arduino Uno + ESP8266/NodeMCU for IoT connectivity.
-The project aims to demonstrate embedded firmware coding, sensor integration, communication protocol usage, and IoT data visualization.
+The project aims to demonstrate embedded firmware coding, sensor integration, communication protocol usage, and IoT data visualization..
